@@ -28,7 +28,10 @@
     "lib",
     "python-package",
     "torch",
-    "pytorch"
+    "pytorch",
+    "torch-cpu",
+    "pytorch-cpu",
+    "cpu"
   ],
   "use_scripts_from_another_entry": {
     "data_uoa": "e8363e22e84dedba",
