@@ -1,0 +1,20 @@
+{
+  "backup_data_uid": "e8363e22e84dedba",
+  "backup_module_uid": "84e27ad9dd12e734",
+  "backup_module_uoa": "script",
+  "control": {
+    "author": "cTuning foundation",
+    "author_email": "admin@cTuning.org",
+    "author_webpage": "http://cTuning.org",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2021-05-11T16:25:58.162859",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "2",
+      "0",
+      "6"
+    ]
+  },
+  "data_name": "install-python-package"
+}
