@@ -1,0 +1,20 @@
+{
+  "backup_data_uid": "09d2881907ae64f7",
+  "backup_module_uid": "84e27ad9dd12e734",
+  "backup_module_uoa": "script",
+  "control": {
+    "author": "cTuning foundation",
+    "author_email": "admin@cTuning.org",
+    "author_webpage": "http://cTuning.org",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2021-05-13T14:27:25.456227",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "2",
+      "0",
+      "6"
+    ]
+  },
+  "data_name": "install-python-wheel"
+}
