@@ -1,3 +1,6 @@
+20210806:
+  * added variations for PyTorch&TorchVision CUDA
+
 20210805:
   * added older variations in torchvision package to support older PyTorch versions for MLPerf inference benchmark
 
